bin/testsuite/tests/compiler/src/errors/compiler317.swg
#global testerror "Err0546"

var b: s32
var a: [b] s32
